<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mensa UPB</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string name="title_mensa">Mensa</string>
    <string name="title_pub">Pub</string>
    <string name="title_hotspot">Hotspot</string>
    <string name="title_hamm">Basilica</string>
    <string name="title_lippstadt">Atrium</string>
    <string name="title_forum">Forum</string>

    <string name="seperator_meals">Meals</string>
    <string name="seperator_sidedishes">Sidedishes</string>
    <string name="seperator_soups">Soups</string>
    <string name="seperator_deserts">Deserts</string>

    <string name="about_version_info">Version 3.3.0</string>
    <string name="about_content_description">Mensa UPB Logo</string>
    <string name="about_homepage">atomfrede.github.com/mensa-upb</string>
    <string name="about_copyright">Copyright Frederik Hahne 2011 – 2014</string>
    <string name="about_gpl">Released under GPLv3</string>
    <string name="about_homepage_title">Homepage</string>
    <string name="about_using">Open Source Contributions</string>

    <string name="about_android_annotations"><a href="http://androidannotations.org/">Android Annotations by excilys</a></string>
    <string name="about_pinned_section_listview"><a href="https://github.com/beworker/pinned-section-listview">Pinned Section ListView by Sergej Shafarenka</a></string>
    <string name="about_crouton"><a href="https://github.com/keyboardsurfer/Crouton">Crouton by Benjamin Weiss</a></string>
    <string name="about_jsoup"><a href="http://jsoup.org/">jsoup by Jonathan Hedley</a></string>
    <string name="about_gson"><a href="https://code.google.com/p/google-gson/">gson by Google Inc.</a></string>
    <string name="about_ironjan"><a href="https://github.com/ironjan/MensaUPB">MensaUPB by ironjan</a></string>

    <string name="menu_about">About</string>
    <string name="about_feedback">Feedback</string>
    <string name="feedback_provide_by">Send with…</string>

    <string name="opening_times_title">Opening Times</string>

    <string name="error_during_load">Can\'t load meals.</string>
    <string name="error_warning_detail">Can\'t load meals. Check your connection and try again. If it still doesn\'t work there might be a problem with data provider.</string>

    <string name="menu_refresh">Refresh</string>

    <string name="marker_kalorienarm">low-calorie</string>
    <string name="marker_fettarm">low-fat</string>
    <string name="marker_vegetarisch">vegetarian</string>
    <string name="marker_vegan">vegan</string>
    <string name="marker_lactosefrei">lactose free</string>
    <string name="marker_glutenfrei">gluten free</string>

    <string name="closed_today">This restaurant is closed today.</string>

    <string name="stwpb">Data and Icons from the Homepage of the <a href="www.stwpb.de">Studentenwerk Paderborn</a></string>
    <string name="stwp_header">Note</string>

    <string name="price_students">Students</string>
    <string name="price_employees">Employees</string>
    <string name="price_guests">Guests</string>

    <string name="price_header">Price: </string>
    <string name="price_per_weight_header">Prices per 100g: </string>
</resources>
